Updated exercises for array-based stack

--- a/Exercises/List/astackPushPRO.html
+++ b/Exercises/List/astackPushPRO.html
@@ -6,7 +6,7 @@ Written by Junyang Chen and Cliff Shaffer
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Array-Based Stacks Push Proficiency Exercise</title>
+  <title>Array-Based Stack Push Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -15,7 +15,7 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="astackPushPRO.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="astackPushPRO.css" type="text/css" />
+  <link rel="stylesheet" href="astackPRO.css" type="text/css" />
 </head>
 
 <div class="exercise">
@@ -29,17 +29,17 @@ Written by Junyang Chen and Cliff Shaffer
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p>class="problem">Your task in this exercise is to show the
-        behavior for array-based stack's push operation.
+        behavior for the array-based stack's push operation.
         In the array displayed below, the "top" position
         is <b><var>arr_size </var></b>.</p>
       <div class="question">
         <p>Push <b><var>insert_value</var></b> into the stack.</p>
-        <p>Click on a value of the array to highlight it, then click
+        <p>Click on a value of the stack to highlight it, then click
           on the "Insert" button to insert
-          <b><var>insert_value</var></b> to the highlighted element.
-	  To move the 'top' label, you should click the label to
-          highlight it, then click the element of the array you want
-          to move to.</p> 
+          <b><var>insert_value</var></b> to the highlighted position.</p>
+	<p>To move the "top" pointer, you should click the label to
+          highlight it, then click the position of the stack that you
+          want to move to.</p> 
         <input id="reset" type="button" value="Reset" />
 	<input id="insert" type="button" value="Insert" />
         <div id="astackPushPRO" class="jsavcanvas"></div>
