--- a/AV/Development/ArrayTree.html
+++ b/AV/Development/ArrayTree.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="firstFit.css" type="text/css" />
+  <link rel="stylesheet" href="ArrayTree.css" type="text/css" />
 
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -20,21 +20,6 @@
   <style>
     #arrayTree {
       height: 300px;
-    }
-
-    .jsavarraytreenode {
-      border: 0;
-      background-color: rgba(0, 0, 0, 0);
-      box-shadow: none;
-      height: 45px;
-    }
-
-    .jsavarraytreenode .jsavarray {
-      margin-top: 0;
-    }
-
-    .jsavarraytreenode .jsavarray .jsavnode {
-      border-radius: 0;
     }
   </style>
 </head>
