Many changes to content in list chapter

--- a/Exercises/List/lstackPop.html
+++ b/Exercises/List/lstackPop.html
@@ -17,12 +17,12 @@ Written by Junyang Chen and Cliff Shaffer
 
   <style>
     .jsavcontainer {
-      height: 130px;
+      height: 150px;
       border: 0px;
 	  margin-top: 30px;
     }
     .jsavcanvas{
-      height: 130px;
+      height: 150px;
     }
     .jsavhorizontallist.jsavautoresize .jsavnode {
       min-width: 30px;
@@ -52,7 +52,6 @@ Written by Junyang Chen and Cliff Shaffer
     }
     .jsavpointer{
       width: 40px;
-      border: 1px solid #bbb;
       text-align: center;
 	  cursor: pointer;
     }
@@ -150,8 +149,8 @@ function addTail(node){
   
     var fx = $('#' + node.id()).position().left + 34;
     var tx = $('#' + node.id()).position().left + 44;
-    var fy = $('#' + node.id()).position().top + 32 +40;
-    var ty = $('#' + node.id()).position().top + 1 +40;
+    var fy = $('#' + node.id()).position().top + 47 +40;
+    var ty = $('#' + node.id()).position().top + 16 +40;
     node.odsa_tail = jsav.g.line(fx,fy,tx,ty,{"opacity": 100,"stroke-width": 1});
   }
 }
@@ -183,8 +182,8 @@ function f_reset() {
     jsavList.get(i).odsa_next = jsavList.get(i).next();
 	jsavList.get(i).odsa_edgeToNext = jsavList.get(i).edgeToNext();
   }
-  jsavList.get(listSize - 1).odsa_tail = jsav.g.line(34 + (listSize - 1)*74, 32 + 40,
-                          44 + (listSize - 1)*74, 1 + 40,{"opacity": 100,"stroke-width": 1});
+  jsavList.get(listSize - 1).odsa_tail = jsav.g.line(34 + (listSize - 1)*74, 47 + 40,
+                          44 + (listSize - 1)*74, 16 + 40,{"opacity": 100,"stroke-width": 1});
   ptop = jsav.pointer("top", jsavList.get(0),{fixed: "true",});
   ptop.click(pclick);
 
@@ -236,7 +235,7 @@ function checkAnswer(arr_size) {
         it starts, and then click on the node that you want it to
         point to.</p>
         <input id="reset" type="button" value="Reset" />
-        <div id="jsav" style = "{background-color : #333}"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
