--- a/Exercises/List/aqueueEnqueue.html
+++ b/Exercises/List/aqueueEnqueue.html
@@ -1,12 +1,12 @@
 <!--
-Array-Based Queue Dequeue Proficiency Exercise.
+Array-Based Queue Enqueue Proficiency Exercise.
 Written by Junyang Chen and Cliff Shaffer
 -->
 
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Array-Based Queue Dequeue Proficiency Exercise</title>
+  <title>Array-Based Queue Enqueue Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -18,12 +18,15 @@ Written by Junyang Chen and Cliff Shaffer
   <style>
     .jsavcontainer {
       height: 350px;
+      border: 0px;
     }
     .jsavcontainer svg{
       pointer-events: all;
     }
     .jsavcanvas{
-      height: 350px;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+       height: 350px;
     }
     .jsavnode {
       line-height: 30px !important;
@@ -32,11 +35,13 @@ Written by Junyang Chen and Cliff Shaffer
       min-height: 30px !important;
       max-height: 30px !important;
     }
+    .jsavnode .jsavvalue { /* Make array cell values center vertically */
+      height: 30px;
+    }
     .jsavpointer{
       width: 40px;
-      border: 1px solid #bbb;
       text-align: center;
-	  cursor: pointer;
+      cursor: pointer;
     }
     #reset { margin-right: 20px;}
     .highlight{
@@ -45,7 +50,9 @@ Written by Junyang Chen and Cliff Shaffer
   </style>
 </head>
 <body>
+
 <script>
+//"use strict";
 // JSAV extension for circular queue.
 (function($){
   function sin(x){
@@ -56,7 +63,7 @@ Written by Junyang Chen and Cliff Shaffer
   }
   var Circular = function(jsav, cx, cy, r1, r2, size, options){
     this.front = null;
-    this. rear = null;
+    this.rear = null;
     this.jsav = jsav;
     this.cx = cx;
     this.cy = cy;
@@ -68,7 +75,7 @@ Written by Junyang Chen and Cliff Shaffer
     var x1, y1, x2, y2, x3, y3, x4, y4, label,
 		i = 0, theta = 0, pathString;
     this.path = [];
-    this.labels = [];
+	this.labels = [];
     while(theta < 360){
       x1 = cx + r1 * cos(theta);
       y1 = cy + r1 * sin(theta);
@@ -89,12 +96,12 @@ Written by Junyang Chen and Cliff Shaffer
       label = this.jsav.label(" ");
       label.css({'position' : 'absolute', 
                  left : cx + (r1+r2)/2 * cos(theta + this.step/2) - 20 + 'px', 
-                 top : cy + (r1+r2)/2 * sin(theta + this.step/2) - 10 + 'px', width : '40px', height:'20px', 'text-align': 'center'});
+                 top : cy + (r1+r2)/2 * sin(theta + this.step/2) - 25 + 'px', width : '40px', height:'20px', 'text-align': 'center'});
       this.labels[i] = label;
       var test = this.jsav.label(i);
       test.css({'position' : 'absolute', 
                  left : cx + (r1)/100*78 * cos(theta + this.step/2) - 20 + 'px', 
-                 top : cy + (r1)/100*78 * sin(theta + this.step/2) - 10 + 'px', width : '40px', height:'20px', 'text-align': 'center'});
+                 top : cy + (r1)/100*78 * sin(theta + this.step/2) - 25 + 'px', width : '40px', height:'20px', 'text-align': 'center'});
   
       i++;
       theta += this.step;
@@ -106,9 +113,6 @@ Written by Junyang Chen and Cliff Shaffer
     this.labels[index].element.html(value);
     return [index, oldval];
   });
-  Circular.prototype.getvalue = function(index){
-    return this.labels[index].element.html();
-  };
   Circular.prototype.highlight = function(index){
     this.path[index]._setattrs({"fill" : "yellow", "opacity" : "0.5"});
   }
@@ -146,6 +150,8 @@ Written by Junyang Chen and Cliff Shaffer
       fy = pointer.label.element.position().top + pointer.label.element.outerHeight();
     }
     pointer.arrow = this.jsav.g.line(fx, fy, tx, ty, {"stroke-width" : 2, "arrow-end":"classic-wide-long"});
+    // CAS: Stuck this in here to patch up positioning for now
+    pointer.label.element.css({top: top-15});
     return pointer;
   }
   JSAV.ext.circular = function(cx, cy, r1, r2, size,options) {
@@ -154,12 +160,9 @@ Written by Junyang Chen and Cliff Shaffer
 }(jQuery));
 
 var jsav,           // The JSAV object
+  answerArr = [],   // The (internal) array that stores the correct answer
   answFrontPos,
   answRearPos,
-  answCopyFrom,
-  copyFrom,
-  arrReturn,
-  labelReturn,
   cloneArr = [],    // A copy of the (internal) array at the start of the exercise for reset
   jsavCir,          // The array that the user manipulates (JSAV object)
   selected_pointer,
@@ -169,6 +172,7 @@ var jsav,           // The JSAV object
   rear_index,
   status,
   background,
+  inValue,          // Enqueue value
   userInput,        // Boolean: Tells us if user ever did anything
   selected_index;   // Position that has been selected by user for swap
 
@@ -224,7 +228,7 @@ function pclick(pointer){
     }else {
       pointer.label.element.removeClass('highlight');
       status = 0;
-    }
+	}
   }else if(status == 0){
     pointer.label.element.addClass('highlight');
     selected_pointer = pointer;
@@ -246,8 +250,8 @@ function clickHandler(index) {
     }else{
       jsavCir.path[selected_index].rObj.attr({"fill":"none", "opacity" : "1"});
       jsavCir.path[index].rObj.attr({"fill":"yellow", "opacity" : "0.5"});
-      selected_index = index;
-    }
+	  selected_index = index;
+	}
   }else if (status == 2){
     resetPointer(selected_pointer, index, selected_pointer.label.element.html());
     selected_pointer.label.element.removeClass('highlight');
@@ -258,22 +262,15 @@ function clickHandler(index) {
   userInput = true;
 };
 
-function f_copy(){
-  var val;
+function f_insert(){
   if(status == 1 && selected_index > -1){
-    jsavCir.path[selected_index].rObj.attr({"fill":"none", "opacity" : "1"});
-    val = jsavCir.getvalue(selected_index);
-    arrReturn.value(0, val);
-    copyFrom = selected_index;
-    selected_index = -1;
-    status = 0;
+    jsavCir.value(selected_index, inValue);
   }
 }
 
 // reset function definition
 function f_reset(maxSize, front, rear) {
   selected_index = -1;
-  copyFrom = front;
   front_index = front;
   rear_index = rear;
   status = 0; 
@@ -283,8 +280,6 @@ function f_reset(maxSize, front, rear) {
   }
   jsav = new JSAV("jsav");	
   jsavCir = jsav.circular(cx, cy, 50, 100, maxSize,{"stroke-width" : 2});
-  arrReturn = jsav.ds.array(["null"],{left: cx + 200, top: cy - 15});
-  labelReturn = jsav.label("return", {left: cx + 155, top : cy - 10});
   if(front === rear){
     front_pointer = jsavCir.pointer("front", front, 0.3);
     rear_pointer = jsavCir.pointer("rear", rear, 0.7);
@@ -306,48 +301,51 @@ function f_reset(maxSize, front, rear) {
       return function(){clickHandler(j);}
     }(i); 
   }
-  arrReturn.element.css( { 'z-index': 100} );
-  arrReturn.click(f_copy);
+  
+
   bindPointerClick(front_pointer);
   bindPointerClick(rear_pointer);
   userInput = false;
-
-  // correct answer
-  answFrontPos = front;
-  answRearPos = rear;
-  if ( ( (rear+maxSize) - front + 1 ) % maxSize !== 0){
-    answFrontPos = (front+1) % maxSize; // Circular increment
-  }else{
-    answCopyFrom = 1000;
-    copyFrom = 1000;
-  }
 };
 
 // Initialise the exercise
-function initJSAV(maxSize, front, rear) {
+function initJSAV(maxSize, front, rear, insertValue) {
   var i, j;
   userInput = false;
   selected_index = -1;
   status = 0;
-  answCopyFrom = front;
-  cloneArr.length = 0; // Out with the old
+  inValue = insertValue; 
+  answerArr.length = 0; // Out with the old
 
   // Give random numbers in range 0..999
   for (i = 0; i < maxSize; i++) {
-    cloneArr[i] = "";
+    answerArr[i] = "";
   }
   var frontIndex = front;
   var rearIndex = rear;
   if( ( (rear+maxSize) - front + 1) % maxSize !== 0){
     while( frontIndex !== rear + 1){
-      cloneArr[frontIndex] = Math.floor(Math.random() * 1000);
+      answerArr[frontIndex] = Math.floor(Math.random() * 1000);
       frontIndex =(frontIndex + 1)%maxSize;
     }
   }
+  // Now make a copy
+  cloneArr = answerArr.slice(0);
 
   f_reset(maxSize, front, rear);
 
-
+  // correct answer
+  answFrontPos = front;
+  answRearPos = rear;
+  if (((rear+2) % maxSize) !== front){
+    rearIndex = (rearIndex+1) % maxSize; // Circular increment
+    answerArr[rearIndex] = inValue;
+    answRearPos = rearIndex;
+  }
+  // Set up handler for insert button
+  $("#insert").click(function () {
+    f_insert();
+  });
   // Set up handler for reset button
   $("#reset").click(function () { f_reset(maxSize, front, rear); });
 };
@@ -357,8 +355,10 @@ function checkAnswer(maxSize) {
   if(front_index !== answFrontPos || rear_index !== answRearPos){
     return false;
   }
-  if(answCopyFrom != copyFrom){
-    return false;
+  for(var i = 0; i < maxSize; i ++){
+    if(jsavCir.labels[i].element.html() != answerArr[i]){
+      return false;
+	};
   }
   return true;
 };
@@ -369,19 +369,20 @@ function checkAnswer(maxSize) {
     <var id="maxSize">randRange(5, 10)</var>
     <var id="front">randRange(0, maxSize-1)</var>
     <var id="rear">randRange(0, maxSize-1)</var>
-    <var id="JSAV">initJSAV(maxSize, front, rear)</var>
+	<var id="insert_value">randRange(0, 999)</var>
+    <var id="JSAV">initJSAV(maxSize, front, rear, insert_value)</var>
   </div>
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem">
-      <div class="question">
-      <div class="question"><p>Show how the Dequeue operation works by
-      selecting an element to remove, and update
+      <div class="question"><p>Show how the enqueue operation works by
+      selecting a position for where the new item goes, and update
       "rear" and "front" if appropriate.</p>
         
         <input id="reset" type="button" value="Reset" />
-        <div id="jsav"></div>
+		<input id="insert" type="button" value="Insert" />
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
