--- a/Exercises/List/lqueueDequeue.html
+++ b/Exercises/List/lqueueDequeue.html
@@ -1,12 +1,12 @@
 <!--
-List-based Enqueue mini-proficiency exercise.
+List-based dequeue mini-proficiency exercise.
 Written by Junyang Chen and Cliff Shaffer
 -->
 
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>List-based Enqueue Proficiency Exercise</title>
+  <title>List-based dequeue Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -17,11 +17,11 @@ Written by Junyang Chen and Cliff Shaffer
 
   <style>
     .jsavcontainer {
-      height: 150px;
+      height: 200px;
       border: 0px;
     }
     .jsavcanvas{
-      height: 150px;
+      height: 200px;
     }
     .jsavhorizontallist.jsavautoresize .jsavnode {
       min-width: 30px;
@@ -30,6 +30,16 @@ Written by Junyang Chen and Cliff Shaffer
       max-height: 30px;
       line-height: 30px;
       padding-right: 12px;
+    }
+    .jsavhorizontalarray.jsavautoresize .jsavnode {
+      min-width: 30px;
+      max-width: 30px;
+      min-height: 30px;
+      max-height: 30px;
+      line-height: 30px;
+    }
+    .jsavnode .jsavvalue { /* Make array cell values center vertically */
+      height: 30px;
     }
     .bgColor{
       font-size: 130%;
@@ -44,7 +54,6 @@ Written by Junyang Chen and Cliff Shaffer
     }
     .jsavpointer{
       width: 40px;
-      border: 1px solid #bbb;
       text-align: center;
 	  cursor: pointer;
     }
@@ -63,6 +72,7 @@ var jsav,               // The JSAV object
   answerOrderArr = [],  // The (internal) array that stores the correct order of nodes
   answFrontNode,        //
   answRearNode,         //
+  answCopyFrom,         //
   orderArr = [],        // Stores the node.id() of the jsavList
   listArr = [],         // Stores the jsav list values
   front,                // pointer front
@@ -70,25 +80,29 @@ var jsav,               // The JSAV object
   front_target,         //
   rear_target,          //
   selected_pointer,     // pointer that is clicked, which will always be front here.
+  selected_node,
   status = 0,           // Nothing is currently selected, status = 0;
+                        // listNode is selected, status = 1;
                         // pointer area is selected, status = 2;
-                        // pointer top is selected, status = 3.
-  newNodeGen,           //
+                        // pointer is selected, status = 3.
+  newNodeGen,    
   newLinkNode,          // New node
   odsa_head,            // head of the list for correct answer
-  connections = [],     //
-  fromNode,             //
-  toNode,               //
+  connections = [],
+  fromNode,
+  toNode,
   jsavList,             // JSAV list
+  returnArr,
+  copyFrom,
   listSize,             // JSAV list size
   insertValue,          // Value to be inserted
   userInput;            // Boolean: Tells us if user ever did anything
 
-// JSAV extensions
+// JSAV extension
 JSAV._types.ds.ListNode.prototype.pNum = 0;
-JSAV._types.ds.ListNode.prototype.odsa_next = {};
-JSAV._types.ds.ListNode.prototype.odsa_tail = {};
-JSAV._types.ds.ListNode.prototype.odsa_edgeToNext = {};
+JSAV._types.ds.ListNode.prototype.odsa_next = null;
+JSAV._types.ds.ListNode.prototype.odsa_tail = null;
+JSAV._types.ds.ListNode.prototype.odsa_edgeToNext = null;
 JSAV._types.Pointer.prototype.click = function(fn){
   var pointer = this;
   this.element.click(function(){fn(pointer)});
@@ -104,12 +118,13 @@ function pclick(pointer){
 
 // Helper function for seting pointer
 function setPointer(name, node, opt){
+
   var pointerRight = {anchor: "right top",
-    myAnchor: "left bottom", fixed: "true",
+    myAnchor: "left bottom",fixed: "true",
     left: -10,
     top: -20};
   var pointerLeft = {anchor: "left top",
-    myAnchor: "right bottom", fixed: "true",
+    myAnchor: "right bottom",fixed: "true",
     left: 15,
     top: -20};
   if(node.pNum == 1)
@@ -190,6 +205,15 @@ function Connect(obj1, obj2){
     connections.push({from: obj1, to: obj2});  
 }
 
+function copyHandler(){
+  if(status == 1){
+    copyFrom = selected_node;
+    jsav.effects.copyValue(selected_node, returnArr, 0);
+    selected_node.unhighlight();
+    status = 0;
+  }
+}
+
 // Click event handler on the list
 function clickHandler(e) {
   var setright = {anchor: "right top", myAnchor: "left bottom", left: -10, top:-20};
@@ -212,6 +236,11 @@ function clickHandler(e) {
         fromNode = this;
         status = 2;
       }
+    }else if(status == 1){
+      selected_node.unhighlight();
+      $('#' + this.id() + " .jsavpointerarea:first").addClass('bgColor');
+      fromNode = this;
+      status = 2;
     }
   }else{
     if(status == 2){
@@ -237,11 +266,25 @@ function clickHandler(e) {
       selected_pointer.element.removeClass("highlight");
       selected_pointer = null;
       status = 0;
-    }
+    }else if(status == 0){
+      this.highlight();
+      selected_node = this;
+      status = 1;
+    }else if(status == 1){
+      if(selected_node == this){
+        this.unhighlight();
+        status = 0;
+      }else{
+        selected_node.unhighlight();
+        selected_node = this;
+        this.highlight();
+      }
+	}
     userInput = true;
   }
 };
 
+// Add a tail for the target node
 function addTail(node){
   var left = node.element.offset().left - jsav.container.find(".jsavcanvas:first").offset().left;
   var top = node.element.offset().top - jsav.container.find(".jsavcanvas:first").offset().top;
@@ -250,98 +293,26 @@ function addTail(node){
   var fy = top + 32;
   var ty = top + 1;
 
-  if(typeof node.odsa_tail !== 'undefined'){
+  if(node.odsa_tail){;
     node.odsa_tail.element.remove();
     node.odsa_tail = jsav.g.line(fx,fy,tx,ty,{"opacity": 100,"stroke-width": 1});
   }else{
+    node.odsa_edgeToNext.element.remove();
+    node.odsa_next = null;
     node.odsa_tail = jsav.g.line(fx,fy,tx,ty,{"opacity": 100,"stroke-width": 1});
   }
   node.odsa_next = null;
 }
 
-function f_newnode() { 
-  if (newNodeGen == false) {
-    if(status == 2){
-      $('#' + fromNode.id() + " .jsavpointerarea:first").removeClass('bgColor');
-      fromNode = null;
-    } else if (status == 3) {
-      selected_pointer.element.removeClass('highlight');
-      selected_pointer = null;
-    }
-    status = 0;
-    newLinkNode = jsavList.newNode("null");
-    newLinkNode.pNum = 0;
-    // Calculate the position for the new node
-    var left = (listSize - 1) * 73 / 2;
-    var top = 60;
-    // Set the position for the new node
-    newLinkNode.css({"top": top, "left": left});
-    
-    newLinkNode.odsa_next = null;
-    newLinkNode.odsa_edgeToNext = null;
-    answerOrderArr = orderArr.slice(0);
-    answerOrderArr.splice(listSize, 0, newLinkNode.id());
-
-    var x1 = left + 34 + leftMargin;
-    var y1 = top + 31 + topMargin;
-    var x2 = left + 45 + leftMargin;
-    var y2 = top + 1 + topMargin;
-	
-    newLinkNode.odsa_tail = jsav.g.line(x1, y1,
-                          x2, y2,{"opacity": 100,"stroke-width": 1});
-
-    $("#" + newLinkNode.id()).css( 'cursor', 'pointer' );
-    $("#" + newLinkNode.id()).draggable({
-      start: function(){
-        $("#" + newLinkNode.id()).css( 'cursor', 'pointer' );
-          if(status == 2){
-            $('#' + fromNode.id() + " .jsavpointerarea:first").removeClass('bgColor');
-            fromNode = null;
-          }else if(status == 1){
-          }
-        status = 0;
-      },
-      drag: function(){
-        var offset = $(this).position();
-        var xPos = parseInt(offset.left);
-        var yPos = parseInt(offset.top);
-        nodeNum = Math.floor(xPos/73);
-        for (var i = connections.length; i--;) {
-          connection(connections[i].from, connections[i].to);
-        }
-        if(newLinkNode.odsa_tail){
-          addTail(newLinkNode);
-        }
-      },
-      stop: function() {
-        var offset = $(this).position();
-        var xPos = parseInt(offset.left);
-        var yPos = parseInt(offset.top);
-        nodeNum = Math.floor(xPos/73);
-        for (var i = connections.length; i--;) {
-          connection(connections[i].from, connections[i].to);
-        }
-        if(newLinkNode.odsa_tail){
-          addTail(newLinkNode);
-        }       
-        jsav.container.trigger("jsav-updaterelative");
-      },
-    });
-    answRearNode = newLinkNode;
-    $("#NewNode").disabled = true;
-    newNodeGen = true;
-	
-  }else{return};
-  userInput = true;
-}
-
-function f_insert() {
-  if(newLinkNode){
-    jsav.effects.copyValue(jsavArr, 0 , newLinkNode);
-    newLinkNode.unhighlight();
+// Click handler function for makenull button
+function f_makenull(){
+  if(status == 2){
+    fromNode.element.removeClass('bgColor');
+    addTail(fromNode);
+    fromNode = null;
     status = 0;
   }
-};
+}
 
 // reset function definition
 function f_reset() {
@@ -350,6 +321,8 @@ function f_reset() {
   userInput = false;
   newNodeGen = false;
   connections = [];
+  selected_node = null;
+  copyFrom = null;
   status = 0;  
 
   // Clear old JSAV canvas
@@ -357,8 +330,10 @@ function f_reset() {
     $("#jsav").empty();
   }
 
+  // Build JSAV Objects
   jsav = new JSAV("jsav");	
   jsavList = jsav.ds.list({"nodegap": 30, "top": topMargin, left: leftMargin});
+  returnArr = jsav.ds.array(["null"], {left : leftMargin + 62, top: topMargin + 70});
   for(var i = listSize - 1; i >= 0; i--)
   {
 	jsavList.addFirst(listArr[i]);
@@ -369,60 +344,82 @@ function f_reset() {
   jsav.recorded();
   jsav.forward();
 
+
   for(var i = 0; i < listSize; i ++)
   {
+    // Store JSAV List orders
     orderArr[i] = jsavList.get(i).id();
+    // Assign .odsa_next the object of the next JSAV node 
     jsavList.get(i).odsa_next = jsavList.get(i).next();
+    // Assign odsa_edgeToNext the edge connecting the JSAV node to the following node
     jsavList.get(i).odsa_edgeToNext = jsavList.get(i).edgeToNext();
   }
-  jsavList.get(listSize - 1).odsa_tail = jsav.g.line(leftMargin + 34 + (listSize - 1)*74, 32 + topMargin,
-                          leftMargin + 44 + (listSize - 1)*74, 1 + topMargin,{"opacity": 100,"stroke-width": 1});
+  // Manually add tail to the last node.
+  jsavList.get(listSize - 1).odsa_tail = jsav.g.line(leftMargin + 34 + (listSize - 1)*74, 47 + topMargin,
+                          leftMargin + 44 + (listSize - 1)*74, 16 + topMargin,{"opacity": 100,"stroke-width": 1});
+
+  // Correct answer
+  answerOrderArr = orderArr.slice(0);
+  if(listSize !== 1)
+  {
+    answerOrderArr.splice(1, 1);
+    answerOrderArr.length = listSize - 1;
+    answCopyFrom = jsavList.get(1);
+  }else{
+    answCopyFrom = null;
+  }
   answFrontNode = jsavList.get(0);
+  if(listSize === 2){
+    answRearNode = jsavList.get(0);
+  }else{
+    answRearNode = jsavList.get(listSize - 1);
+  }
 
-  // Hidden JSAV array for insert animation
-  jsavArr = jsav.ds.array([insertValue], {indexed: false, center: false,left: 650, top: -70});
-
-  // Bind click handlers
+  // Bind click event handlers.
   front.click(pclick);
-  rear.click(pclick);
-  jsavList.click(clickHandler); 
+  rear.click(pclick);  
+  returnArr.click(copyHandler);
+  jsavList.click(clickHandler);
 
   userInput = false;
 };
 
 // Initialise the exercise
-function initJSAV(size, value) {
-  // assign values to global variables
-  answerArr.length = 0;
+function initJSAV(size) {
   listSize = size;
-  insertValue = value;
+  answerArr.length = 0;
 
-  // Give random numbers in range 0..999
   answerArr[0] = "null";
+  // Give random numbers in range 0..999
   for (i = 1; i < size+1; i++) {
     answerArr[i] = Math.floor(Math.random() * 1000);
   }
+  // Make a copy.
   listArr = answerArr.slice(0);
 
   f_reset();
 
   // correct answer
-  answerArr.splice(listSize, 0, insertValue);
-  
-  // Set up click handlers
-  $("#NewNode").click(function () { f_newnode(); });
-  $("#insert").click(function () { f_insert(); });
+  if(listSize !== 1)
+  {
+    answerArr.splice(1, 1);
+    answerArr.length = listSize - 1;
+  }
+
+  // Set up handler for 'makenull'
+  $("#makenull").click(function () { f_makenull(); });
   // Set up handler for reset button
   $("#reset").click(function () { f_reset(); });
 };
 
-// Check user's answer for correctness
+// Check user's answer for correctness: User's array must match answer
 function checkAnswer(arr_size) {
-  var i = 0, 
+  var i = 0,
     curr = jsavList.get(0);
 
-  if(front.target() !== answFrontNode){return false;}
-  if(rear.target()!== answRearNode) {return false};
+  if(front.target() !== answFrontNode){ return false;}
+  if(rear.target()!== answRearNode) { return false};
+  if( answCopyFrom !== copyFrom) {return false;}
 
   while(curr){
     if(curr.value() == answerArr[i] && curr.id() == answerOrderArr[i]){
@@ -433,10 +430,13 @@ function checkAnswer(arr_size) {
     }
   }
 
-  if(i == listSize + 1)
+  if(listSize == 1){
+    return true;
+  }else if(i == listSize - 1)
   {
     return true;
   }
+
   return false;
 };
 </script>
@@ -444,20 +444,20 @@ function checkAnswer(arr_size) {
 <div class="exercise">
   <div class="vars">
     <var id="arr_size">randRange(1, 6)</var>
-	<var id="insert_value">randRange(0, 999)</var>
-    <var id="JSAV">initJSAV(arr_size,insert_value)</var>
+    <var id="JSAV">initJSAV(arr_size)</var>
   </div>
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"></p>
       <div class="question">
-	<p>Enqueue a new value by creating a new node, placing the
-        value, and adjusting "front" and "rear" if appropriate.</p>
+	<p>Dequeue a value from the linked queue. First move the
+        correct value to the box shown below the list. Then update any
+        necessary pointers. If a pointer variable needs to be set to
+        null, then click the pointer and then click on the "Make Null" button.</p>
         <input id="reset" type="button" value="Reset" />
-		<input id="NewNode" type="button" value="NewNode" />		
-		<input id="insert" type="button" value="Insert" />
-        <div id="jsav" style = "{background-color : #333}"></div>
+        <input id="makenull" type="button" value="Make Null" />
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
         <div class="guess">
