Minor updates to algorithm analysis exercises; set up alternate asymptotic analysis module for CS2114

--- a/Exercises/AlgAnal/AlgAnlsMCQbest3.html
+++ b/Exercises/AlgAnal/AlgAnlsMCQbest3.html
@@ -13,12 +13,12 @@
     <div id="problem-type-or-description">
       <p class="question"> Which of these is the best lower bound for
 	a growth rate of <code>5n + 3</code>?
-      <div class="solution"><var><code>O(n)</code></var></div>
+      <div class="solution"><var><code>\Omega(n)</code></var></div>
       <ul class="choices">
-	<li><var><code>O(n^2)</code><var></li>
-	<li><var><code>O(n \log n)</code></var></li>
-	<li><var><code>O(\log n)</code></var></li>
-	<li><var><code>O(1)</code></var></li>
+	<li><var><code>\Omega(n^2)</code><var></li>
+	<li><var><code>\Omega(n \log n)</code></var></li>
+	<li><var><code>\Omega(\log n)</code></var></li>
+	<li><var><code>\Omega(1)</code></var></li>
       </ul>
       <div class="hints">
         <p>The simplifying rules tell us that we can drop constants
