--- a/Exercises/AlgAnal/AnalProgramMCQtheta4.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta4.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="question"> Determine <code>\Theta</code> for the
       following code fragments in the average case. Assume that all
-      variables are of type <code>int</code>.
+      variables are of type "int".
       <pre>
        for (i=0; i &lt; n-1; i++)
            for (j=i+1; j &lt; n; j++) {
