--- a/Exercises/AlgAnal/AnalProgramMCQtheta6.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta6.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="question"> Determine <code>\Theta</code> for the
       following code fragments in the average case. Assume that all
-      variables are of type <code>int</code>.
+      variables are of type "int".
       <pre> 
        sum = 0; 
        for (i=1; i &leq; n; i*=2)
