--- a/Exercises/AlgAnal/AnalProgramMCQtheta7.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta7.html
@@ -12,10 +12,11 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> Determine <code>\Theta</code> for the
-      following code fragments in the average case. Assume that all
-      variables are of type <code>int</code>. Assume that array A
-      contains <code>n</code> values, Random takes constant time, and
-      sort takes <code> n \log n</code> steps.
+      following code fragments in the average case.
+      Assume that all variables are of type "int".
+      Assume that array A contains <code>n</code> values,
+      "random" takes constant time,
+      and "sort" takes <code> n \log n</code> time.
       <pre> 
        sum = 0; 
        for (i=0; i &lt; n; i++) {
