--- a/Exercises/AlgAnal/AnalProgramMCQtheta.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="question"> Determine <code>\Theta</code> for the
       following code fragments in the average case. Assume that all
-      variables are of type <code>int</code>.
+      variables are of type "int".
       <pre>
       a = b + c;
       d = a + e;
