--- a/Exercises/AlgAnal/AnalProgramMCQtheta9.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta9.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="question"> Determine <code>\Theta</code> for the
       following code fragments in the average case. Assume that all
-      variables are of type <code>int</code>. Assume array A contains
+      variables are of type "int". Assume array A contains
       a random permutation of the values from 0 to <code> n-1</code>.
       <pre> 
        sum = 0; 
