Minor changes in binarySearchPRO

--- a/AV/Searching/binarySearchPRO.html
+++ b/AV/Searching/binarySearchPRO.html
@@ -17,6 +17,10 @@
     .jsavvalue {
       height: 36px;
     }
+    .jsavcode {
+      border: 1px solid;
+      border-color: white;
+    }
   </style>
 </head>
 
