Lots of updates to sorting, lists

--- a/AV/Sorting/InsertionSortAV.html
+++ b/AV/Sorting/InsertionSortAV.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     #container {
       width: 780px;
@@ -30,7 +31,7 @@
     <p>
       <input id="run" type="button" name="run" />
       <input id="reset" type="button" name="reset" />
-      <label 9d="arraysizeLabel" for="arraysize"></label>
+      <label id="arraysizeLabel" for="arraysize"></label>
       <select id="arraysize"></select>
     </p>
     <p>
