--- a/Exercises/Development/llistInsertPRO.html
+++ b/Exercises/Development/llistInsertPRO.html
@@ -14,6 +14,7 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 
   <style>
     .jsavcontainer {
@@ -23,23 +24,9 @@ Written by Junyang Chen and Cliff Shaffer
     .jsavcanvas{
       height: 150px;
     }
-    .jsavhorizontallist.jsavautoresize .jsavnode {
-      min-width: 30px;
-      max-width: 30px;
-      min-height: 30px;
-      max-height: 30px;
-      line-height: 30px;
-      padding-right: 12px;
-    }
     .bgColor{
       font-size: 130%;
       background-color: yellow;
-    }
-    .jsavlist .jsavvalue { /* This will get the linked list cell values to center vertically */
-      height: 30px;
-    }
-    .jsavlist.jsavautoresize.jsavhorizontallist{
-      height: 150px;
     }
     .jsavcanvas svg{
       height: 150px;
