--- a/Exercises/List/alistDeletePRO.html
+++ b/Exercises/List/alistDeletePRO.html
@@ -16,6 +16,7 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="alistDeletePRO.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <link rel="stylesheet" href="alistPRO.css" type="text/css" />
 </head>
 <body>
