--- a/Exercises/List/alistInsertPRO.html
+++ b/Exercises/List/alistInsertPRO.html
@@ -15,6 +15,7 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="alistInsertPRO.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <link rel="stylesheet" href="alistPRO.css" type="text/css" />
 </head>
 
