Added back button to concept map page. Disabled edge nodes.

--- a/lib/conceptMap.html
+++ b/lib/conceptMap.html
@@ -43,9 +43,9 @@
 
   </div>
 
-
   <div id="cmapcontainer">
     <div class="avcontainer">
+      <input type="button" id="termBack" class="termBack" value="&#8592;Back">
       <div id ="info"><div>
     </div>
   </div>
