More polishing of content

--- a/Exercises/Design/CompareTF1.html
+++ b/Exercises/Design/CompareTF1.html
@@ -25,7 +25,7 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>C++ will let us do this.</p>
+	<p>C++ will let us redefine these operators for arbitrary types.</p>
 	<p>But not many other languages support such "operator overloading".</p>
       </div>
     </div>
