--- a/Exercises/Sorting/BubsortPRO.html
+++ b/Exercises/Sorting/BubsortPRO.html
@@ -15,6 +15,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 
   <style>
     .jsavcontainer {
