--- a/Exercises/Sorting/InssortSumm.html
+++ b/Exercises/Sorting/InssortSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Insertion Sort: Multiple Choice Summary</title>
+  <title>Insertion Sort: Module Summary Questions</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
