Update insertionsort filenames, other minor tweaks

--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -11,9 +11,6 @@
       width: 780px;
       height: 570px;
     }
-.whitetext {
-  color: #fff;
-}
   </style>
 </head>
 
@@ -56,6 +53,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="InsertionSortAV.js"></script>
+<script src="insertionsortAV.js"></script>
 </body>
 </html>
