Standardize CSS for KA exercises, get rid of unused SortingAnal files, bring other SortingAnal files up to date

--- a/Exercises/List/aqueueEnqueuePRO.html
+++ b/Exercises/List/aqueueEnqueuePRO.html
@@ -14,11 +14,10 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
       height: 350px;
-      border: 0px;
     }
     .jsavcontainer svg{
       pointer-events: all;
@@ -27,16 +26,6 @@ Written by Junyang Chen and Cliff Shaffer
       -moz-user-select: none;
       -webkit-user-select: none;
        height: 350px;
-    }
-    .jsavnode {
-      line-height: 30px !important;
-      min-width: 30px !important;
-      max-width: 30px !important;
-      min-height: 30px !important;
-      max-height: 30px !important;
-    }
-    .jsavnode .jsavvalue { /* Make array cell values center vertically */
-      height: 30px;
     }
     .jsavpointer{
       width: 40px;
