--- a/Exercises/List/lstackPushPRO.html
+++ b/Exercises/List/lstackPushPRO.html
@@ -14,12 +14,11 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
       height: 150px;
-      border: 0px;
-	  margin-top: 30px;
+      margin-top: 30px;
     }
     .jsavcanvas{
       height: 150px;
