--- a/Exercises/Sorting/InssortPRO.html
+++ b/Exercises/Sorting/InssortPRO.html
@@ -19,7 +19,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
 
   <style>
     .jsavcontainer {
-      border: 0px;
+      border: 0;
     }
     #reset { margin-right: 20px;}
   </style>
