--- a/Exercises/List/aqueueDequeuePRO.html
+++ b/Exercises/List/aqueueDequeuePRO.html
@@ -14,24 +14,16 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
       height: 350px;
-      border: 0px;
     }
     .jsavcontainer svg{
       pointer-events: all;
     }
     .jsavcanvas{
       height: 350px;
-    }
-    .jsavnode {
-      line-height: 30px !important;
-      min-width: 30px !important;
-      max-width: 30px !important;
-      min-height: 30px !important;
-      max-height: 30px !important;
     }
     .jsavpointer{
       width: 40px;
