--- a/Exercises/List/lqueueDequeuePRO.html
+++ b/Exercises/List/lqueueDequeuePRO.html
@@ -14,11 +14,10 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
       height: 200px;
-      border: 0px;
     }
     .jsavcanvas{
       height: 200px;
