--- a/Exercises/Sorting/FindInversionsPRO.html
+++ b/Exercises/Sorting/FindInversionsPRO.html
@@ -15,12 +15,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-
-  <style>
-    .jsavcontainer {
-      border: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 </head>
 
 <body>
