Tuning sorting timer code

--- a/Exercises/Development/llistRemovePRO.html
+++ b/Exercises/Development/llistRemovePRO.html
@@ -30,6 +30,17 @@ Written by Junyang Chen and Cliff Shaffer
       -ms-user-select: none;
       user-select: none;
     }
+    .jsavhorizontallist.jsavautoresize .jsavnode {
+      min-width: 30px;
+      max-width: 30px;
+      min-height: 30px;
+      max-height: 30px;
+      line-height: 30px;
+      padding-right: 12px;
+    }
+    .jsavnode .jsavvalue { /* Make array cell values center vertically */
+      height: 30px;
+    }
     .bgColor{
       font-size: 130%;
       background-color: yellow;
