--- a/Exercises/Development/llistInsertPRO.html
+++ b/Exercises/Development/llistInsertPRO.html
@@ -24,6 +24,17 @@ Written by Junyang Chen and Cliff Shaffer
     .jsavcanvas{
       height: 150px;
     }
+    .jsavhorizontallist.jsavautoresize .jsavnode {
+      min-width: 30px;
+      max-width: 30px;
+      min-height: 30px;
+      max-height: 30px;
+      line-height: 30px;
+      padding-right: 12px;
+    }
+    .jsavnode .jsavvalue { /* Make array cell values center vertically */
+      height: 30px;
+    }
     .bgColor{
       font-size: 130%;
       background-color: yellow;
