--- a/Exercises/Sorting/ShellsortSublist.html
+++ b/Exercises/Sorting/ShellsortSublist.html
@@ -12,11 +12,7 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <style>
-    .jsavcontainer {
-      border: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 </head>
 
 <body>
