--- a/AV/Sorting/shellsortPRO.html
+++ b/AV/Sorting/shellsortPRO.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="shellsortPRO.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 </head>
 
 <body>
@@ -13,48 +14,34 @@
   <table class="proHeaderTable">
     <tr>
       <td class="headerLeft">
-        <input type="button" id="help" name="help" value="Help" />
+        <input type="button" id="help" name="help" />
       </td>
       <td class="headerCenter">
         <p class="jsavexercisecontrols"></p>
       </td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
   <form class="avcontainer">
     <div class="jsavcanvas">
-      <p class="instructLabel">Instructions:</p>
-      <p class="instructions">
-        For each increment, you will need to process each
-        sublist in turn. For each sublist, click on its entries in the
-        Input array to highlight them. Once you have the sublist
-        selected, click "Done Selecting". Next, sort the selected
-        items by clicking on them to swap pairs of items.
-        Then click "Done Sorting Sublist" to go on to the next
-        sublist. When you have processed all of the sublists for a given
-        increment, click "Done Increment". Click on "Help" for more details.
-      </p>
+      <p class="instructLabel"></p>
+      <p class="instructions"></p>
 
-      <p>Increments to use:
+      <span class="incrementLabel"></span>
         <input type="text" readonly="readonly" name="increments" id="increments">
         <span class="jsavscore"></span>
       </p>
 
-      <p><b>Input:</b></p>
+      <p class="inputLabel"></p>
 
       <ol id="profArray"></ol>
 
-      <input type="button" id="selecting" name="selecting"
-        data-desc="Indicates user is done selecting" value="Done Selecting" />
-      <input type="button" id="sorting" name="sorting"
-        data-desc="Indicates user is done sorting the sublist"
-        value="Done Sorting Sublist" />
-      <input type="button" id="incrementing" name="incrementing"
-        data-desc="Indicates user is done with the current increment"
-        value="Done Increment" />
+      <input type="button" id="selecting" name="selecting" />
+      <input type="button" id="sorting" name="sorting" />
+      <input type="button" id="incrementing" name="incrementing" />
 
       <p class="jsavoutput jsavline"></p>
     </div>
