--- a/AV/Sorting/shellsortPerf.html
+++ b/AV/Sorting/shellsortPerf.html
@@ -13,25 +13,21 @@
   <table class="headerTable">
     <tr>
       <td class="headerLeft"></td>
-      <td class="headerCenter">
-        <h1>Shellsort Performance</h1>
-      </td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
+        <input type="button" id="about" name="about" />
       </td>
     </tr>
   </table>
 
   <div id="left">
     <form id="ssperform">
-      <p><label for="increments">Increments: Type your increment
-                                 series below.</label></p>
-      <input type="text" id="increments" size="42" name="increments"
-             placeholder="Space separated values, for example 8 4 2 1" />
+      <label id="incrementsLabel" for="increments"></label>
+      <input type="text" id="increments" size="42" name="increments" />
       <p>
-        <input type="button" id="run" name="run" value="Run" />
-        <input type="button" id="clear" name="clear" value="Clear" />
-        <label for="arraysize">&nbsp;Input size:&nbsp;</label>
+        <input id="run" type="button" name="run" />
+        <input id="clear" type="button" name="clear" />
+        <label id= "arraysizeLabel"  for="arraysize"></label>
         <input id="arraysize" name="arraysize" type="number" value="64"/>
       </p>
       <p class="jsavoutput jsavscroll"></p>
@@ -39,7 +35,7 @@
   </div> <!--left-->
 
   <div id="right">
-    <h2>Directions</h2>
+    <h2 id="directionsH2"></h2>
     <div id="directions">
       <p>Type in your desired series of increments, then press
          "Run". Remember that your series should always end in 1.</p>
