Updating/polishing material

--- a/AV/Sorting/mergesortHelpPRO.html
+++ b/AV/Sorting/mergesortHelpPRO.html
@@ -26,7 +26,9 @@
   <li>If you want to restart the exercise, click the "Reset" button.</li>
   <li>If you want to see the correct answer, click the "Model Answer" button to see a slideshow in a pop-up window.</li>
   <ul>
-    <li><b>Note</b>: Viewing the answer will prevent you from obtaining credit for the current problem instance.</li>
+    <li><b>Note</b>: Viewing the answer will prevent you from
+obtaining credit for the current problem instance. So just hit "reset"
+when you are done viewing the model answer.</li>
   </ul>
   <li>The button with gears on it will let you set some options such as the animation speed (for the slideshow model answer).</li>
   <li>The "About" button will tell you about who wrote this, etc.</li>
