--- a/AV/Sorting/shellsorthelpPRO.html
+++ b/AV/Sorting/shellsorthelpPRO.html
@@ -68,6 +68,11 @@ If you want to restart the exercise, click the "Reset" button.
 button.
 <li> If you want to see the correct answer, click the "Model Answer"
 button to see a slideshow in a pop-up window.
+  <ul>
+    <li><b>Note</b>: Viewing the answer will prevent you from
+obtaining credit for the current problem instance. So just hit "reset"
+when you are done viewing the model answer.</li>
+  </ul>
 <li> The button with gears on it will let you set some options such as
   the animation speed (for the slideshow model answer) and whether the
   array looks like cells or bars.
