--- a/Exercises/Sorting/QuicksortPartitPRO.html
+++ b/Exercises/Sorting/QuicksortPartitPRO.html
@@ -15,17 +15,7 @@ Written by Gayathri Subramanian, Dan Breakiron, and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-
-  <style>
-    .jsavcontainer {
-      border: 0;
-      width: 100%;
-    }
-    
-    #reset {
-      margin-right: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 <head>
 
 <body>
