--- a/AV/Sorting/heapsortPRO.html
+++ b/AV/Sorting/heapsortPRO.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
     <link rel="stylesheet" href="heapsortPRO.css" />
   </head>
   <body>
@@ -12,31 +13,24 @@
       <table class="proHeaderTable">
         <tr>
           <td class="headerLeft">
-            <input type="button" id="help" name="help" value="Help" />
+            <input id="help" type="button" name="help" />
           </td>
           <td class="headerCenter">
             <p class="jsavexercisecontrols"></p>
           </td>
           <td class="headerRight">
-            <input type="button" id="about" name="about" value="About" />
-            <a id="settings" class="jsavsettings" href="#">Settings</a>
+            <input id="about" type="button" name="about" />
+            <a id="settings" class="jsavsettings" href="#"></a>
           </td>
         </tr>
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-          <p class="instructLabel">Instructions:</p>
+          <p class="instructLabel"></p>
           <p class="instructions">
-            Reproduce the behavior of heapsort for the maximum heap
-            below. You can swap keys by clicking the first one and
-            then the second one in either of the representations
-            (array or binary tree). Begin by swapping the last key
-            with the largest key, and reducing the size of the heap by
-            one (by clicking the "Decrement heap size" button). After
-            that, restore the heap property again.
           </p>
           <p id="procontrols">
-            <input id="decrement" type="button" value="Decrement heap size" />
+            <input id="decrement" type="button" />
             <span class="jsavscore"></span>
           </p>
         </div>
