--- a/AV/Sorting/quicksortAV.html
+++ b/AV/Sorting/quicksortAV.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <link rel="stylesheet" href="quicksortAV.css" type="text/css" />
 </head>
 
@@ -13,27 +14,24 @@
   <table class="headerTable">
     <tr>
       <td class="headerLeft"></td>
-      <td class="headerCenter avTitle">
-        Quicksort Visualization
-      </td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
 
   <form id="ssperform">
     <p>
-      <input type="button" id="run" name="run" value="Run" />
-      <input type="button" id="reset" name="reset" value="Reset" />
-      <label for="arraysize">&nbsp;List size:&nbsp;</label>
+      <input type="button" id="run" name="run" />
+      <input type="button" id="reset" name="reset" />
+      <label for="arraysize"></label>
       <select id="arraysize"></select>
     </p>
     <p>
-      <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text"
-         placeholder="Type space-separated values, or hit 'run' to use random values" />
+      <label for="arrayValues"></label>
+      <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
   <div class="avcontainer">
@@ -49,7 +47,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../sortUtils.js"></script>
 <script src="quicksortCODE.js"></script>
 <script src="quicksortAV.js"></script>
 </body>
