--- a/AV/Sorting/quicksortPRO.html
+++ b/AV/Sorting/quicksortPRO.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <link rel="stylesheet" href="quicksortPRO.css" type="text/css" />
 </head>
 
@@ -13,20 +14,20 @@
   <table class="proHeaderTable">
     <tr>
       <td class="headerLeft">
-        <input type="button" id="help" name="help" value="Help" />
+        <input type="button" id="help" name="help" />
       </td>
       <td class="headerCenter">
         <p class="jsavexercisecontrols"></p>
       </td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
   
   <form class="avcontainer">
-    <p class="instructLabel">Instructions:</p>
+    <p class="instructLabel"></p>
     <p class="instructions">
       This exercise has you perform all of the steps taken by
       Quicksort, except that the details of the partion step are done
@@ -52,8 +53,8 @@
     </p>
     
     <p>
-      <input type="button" id="partition" name="partition" value="Partition" />
-      <input type="button" id="markSorted" name="markSorted" value="Mark Selected as Sorted" />
+      <input type="button" id="partition" name="partition" />
+      <input type="button" id="markSorted" name="markSorted" />
       <span class="jsavscore"></span>
     </p>
     <p class="jsavoutput jsavline"></p>
