Complete this round of polishing for sorting chapter

--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Radix Sort AV</title>
+  <title>Radix Sort: Array</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     #container {
       width: 800px;
-      height: 580px;
+      height: 490px;
     }
 
     .jsavline {
@@ -18,43 +19,42 @@
 </head>
 
 <body>
-<div id="container" style="height: 580px;">
+<div id="container">
   <table class="headerTable">
     <tr>
       <td class="headerLeft">
-        <input type="button" id="help" name="help" value="Help" />
+        <input id="help" type="button" name="help" />
       </td>
-      <td class="headerCenter avTitle">
-        Radix Sort: Array
-      </td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input id="about" type="button" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
 
-  <form id="ssperform" style="margin-top:10px;">
-    <input type="button" id="run" name="run" value="Run" />
-    <input type="button" id="reset" name="reset" value="Reset" />
-    <label for="arraysize">&nbsp;Array size:&nbsp;</label>
-    <select id="arraysize"></select>
-    <label for="digitsize">&nbsp;Digits:&nbsp;</label>
-    <select id="digitsize">
-      <option value="1"> 1 </option>
-      <option selected="selected" value="2"> 2 </option>
-      <option value="3"> 3 </option>
-      <option value="4"> 4 </option>
-    </select>
+  <form id="ssperform">
     <p>
-      <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text"
-         placeholder="Type space-separated values, or hit 'run' to use random values" />
+      <input id="run" type="button" name="run" />
+      <input id="reset" type="button" name="reset" />
+      <label id="arraysizeLabel" for="arraysize"></label>
+      <select id="arraysize"></select>
+      <label id="digitsLabel" for="digitsize"></label>
+      <select id="digitsize">
+        <option value="1"> 1 </option>
+        <option selected="selected" value="2"> 2 </option>
+        <option value="3"> 3 </option>
+        <option value="4"> 4 </option>
+      </select>
+    </p>
+    <p>
+      <label id="arrayValuesLabel" for="arrayValues"></label>
+      <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
   <div class="avcontainer">
     <span class="jsavcounter"></span>
-    <div class="jsavcontrols" style="margin-top: -15px;"></div>
+    <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline"></p>
   </div> <!--avcontainer-->
 </div> <!--container-->
@@ -66,7 +66,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../sortUtils.js"></script>
 <script src="radixArrayAV.js"></script>
 </body>
 </html>
