--- a/AV/Sorting/radixAVHelp.html
+++ b/AV/Sorting/radixAVHelp.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="content">
 <h1>Array-based Radix Sort Visualization Help Page</h1>
 <p>
 This is a visualization for the array-based implementation of Radix
@@ -35,8 +36,7 @@ You can reset the visualization whenever you want.
 The little gear button at the top lets you control some options.
 The most important one is the animation speed. If you think that the
 display of the swaps is going too fast or slow, you can adjust it.
-You can also make the values appear in an array as numbers, or as bars.
 </p>
-
+</div>
 </body>
 </html>
