Renamed loadLangData() to loadExerConfig() to more accurately reflect what the function now does

--- a/AV/Development/multipleCodeObjects.html
+++ b/AV/Development/multipleCodeObjects.html
@@ -19,7 +19,7 @@
     <script src="../../lib/odsaAV-min.js"></script>
     <script>
     var av = new JSAV("av"),
-        config = ODSA.UTILS.loadLangData({'av_container': 'av'}),
+        config = ODSA.UTILS.loadExerConfig({'av_container': 'av'}),
         code = config.code,
         code0 = av.code(code[0]),
         code1 = av.code(code[1]),
